--- a/MusicOrganizer/Views/Songs/New.cshtml
+++ b/MusicOrganizer/Views/Songs/New.cshtml
@@ -8,10 +8,14 @@
       rel="stylesheet" 
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
       crossorigin="anonymous">
-    <link rel="stylesheet" href="~/css/styles.css">
   </head>
   <body>
-    @RenderBody()
-    @await Html.PartialAsync("Footer")
+    <h1>Add a new song to @Model.Name</h1>
+    <form action="/albums/@Model.Id/songs" method="post">
+      <input id="albumId" name="albumId" type="hidden" value="@Model.Id"
+      <label for="songTitle">Song Title</label>
+      <input id="songTitle" name="songTitle" type="text">
+      <button type="submit">Add Song</button>
+    </form>
   </body>
 </html>
