--- a/MusicOrganizer/Views/Songs/Show.cshtml
+++ b/MusicOrganizer/Views/Songs/Show.cshtml
@@ -2,16 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Albums</title>
+    <title>My Tracklist</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
       crossorigin="anonymous">
-    <link rel="stylesheet" href="~/css/styles.css">
   </head>
   <body>
-    @RenderBody()
-    @await Html.PartialAsync("Footer")
+    <h1>Song Title: </h1>
+
+    <h2>@Model.Title</h2>
+
+    <a href='/songs/new'>Add another song</a>
+    <a href='/songs'>View all songs</a>
   </body>
 </html>
