Add artistName field for Create + New

--- a/MusicOrganizer/Views/Albums/New.cshtml
+++ b/MusicOrganizer/Views/Albums/New.cshtml
@@ -16,6 +16,8 @@
     <form action="/albums" method="post">
       <label for="albumName">Album name</label>
       <input id="albumName" name="albumName" type="text">
+      <label for="artistName">Artist</label>
+      <input id="artistName" name="artistName" type="text">
       <button type="submit">Add</button>
     </form>
 
