--- a/MusicOrganizer/Views/Albums/Index.cshtml
+++ b/MusicOrganizer/Views/Albums/Index.cshtml
@@ -21,7 +21,7 @@
 
     @foreach (Album album in Model)
     {
-      <h3><a href='/albums/@album.Id'>@album.Name</a></h3>
+      <h3><a href='/albums/@album.Id'>@album.Name | @album.Artist</a></h3>
     }
 
     <p><a href='/'>Back home</a></p>
