Activate dark mode :flashlight:

--- a/MusicOrganizer/Views/Home/Index.cshtml
+++ b/MusicOrganizer/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
   Layout = "_Layout";
 }
 
-    <h1>Welcome to your Music Organizer!</h1>
-    <a href='/albums'>View albums</a>
+    <h1>Your Library</h1>
+    <a href='/albums'>View Albums <span class="material-symbols-outlined">
+arrow_right_alt
+</span></a>
     <br>
-    <a href='/albums/new'>Add a new album</a>
-</html>
+    <a href='/albums/new'>New Album <span class="material-symbols-outlined">Add_circle</span></a>
