--- a/MusicOrganizer/Views/Shared/_Layout.cshtml
+++ b/MusicOrganizer/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <meta charset="utf-8">
     <title>My Albums</title>
     <link 
@@ -12,6 +13,5 @@
   </head>
   <body>
     @RenderBody()
-    @await Html.PartialAsync("Footer")
   </body>
 </html>
