--- a/MusicOrganizer/Views/Albums/Index.cshtml
+++ b/MusicOrganizer/Views/Albums/Index.cshtml
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My Albums</title>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-      crossorigin="anonymous">
-  </head>
-  <body>
+@{
+  Layout = "_Layout";
+}
+
     @using MusicOrganizer.Models;
 
     <h1>Albums</h1>
@@ -24,6 +16,6 @@
       <h3><a href='/albums/@album.Id'>@album.Name | @album.Artist</a></h3>
     }
 
-    <p><a href='/'>Back home</a></p>
-  </body>
-</html>
+    <p><a href='/'>Back home <span class="material-symbols-outlined">
+arrow_back
+</span></a></p>
