--- a/MusicOrganizer/Views/Albums/New.cshtml
+++ b/MusicOrganizer/Views/Albums/New.cshtml
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My Albums</title>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-      crossorigin="anonymous">
-  </head>
-  <body>
+@{
+  Layout = "_Layout";
+}
     <h1>Add an album</h1>
     <p>Add an album here:</p>
 
@@ -18,10 +9,8 @@
       <input id="albumName" name="albumName" type="text">
       <label for="artistName">Artist</label>
       <input id="artistName" name="artistName" type="text">
-      <button type="submit">Add</button>
+      <input type="submit" value="Add" class="btn btn-success" />
     </form>
 
     <p><a href="/">Back home</a></p>
     <p><a href="/albums">Back to categories.</a></p>
-  </body>
-</html>
