MusicOrganizer => SpotifyClone :busts_in_silhouette:

--- a/SpotifyClone/Views/Albums/Show.cshtml
+++ b/SpotifyClone/Views/Albums/Show.cshtml
@@ -10,7 +10,7 @@
       crossorigin="anonymous">
   </head>
   <body>
-    @using MusicOrganizer.Models;
+    @using SpotifyClone.Models;
 
     <h3>Tracklist:</h3>
 
