--- a/SpotifyClone/Views/Songs/Index.cshtml
+++ b/SpotifyClone/Views/Songs/Index.cshtml
@@ -1,33 +1,22 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My To-Do List!</title>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-      crossorigin="anonymous">
-  </head>
-  <body>
-    @using MusicOrganizer.Models;
+@{
+    Layout = "_Layout";
+}
 
-    <h1>Tracklist</h1>
+@model List<SpotifyClone.Models.Song>
 
-    @if (Model.Count == 0)
-    {
-      <p>There are no songs in the list.</p>
-    }
+<div class="container">
+  @if (Model.Count == 0)
+  {
+    <p>No songs available.</p>
+  }
+  else
+  {
     <ul>
-      @foreach (Song song in Model)
+      @foreach (SpotifyClone.Models.Song song in Model)
       {
-      <li><a href='/songs/@song.Id'>@song.Title</a></li>
+        <li>@Html.SongLink(song)</li>
       }
     </ul>
-    <a href="/items/new">Add a new song.</a>
-
-    <form action="/songs/delete" method="post">
-      <button type="submit" name="button">Clear All Songs</button>
-    </form>
-  </body>
-</html>
+  }
+@HtmlActionLink("Add new Song", "Create")
+</div>
