--- a/SpotifyClone/Views/Songs/Create.cshtml
+++ b/SpotifyClone/Views/Songs/Create.cshtml
@@ -1,21 +1,32 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My Albums</title>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-      crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Add a new song to @Model.Name by @Model.Artist</h1>
-    <form action="/albums/@Model.Id/songs" method="post">
-      <input id="albumId" name="albumId" type="hidden" value="@Model.Id"
-      <label for="songTitle">Song Title</label>
-      <input id="songTitle" name="songTitle" type="text">
-      <button type="submit">Add Song</button>
-    </form>
-  </body>
-</html>
+@{
+    Layout = "_Layout";
+}
+
+@model SpotifyClone.Models.Song
+
+<h1>Add New Song</h1>
+<hr />
+
+<div class="container">
+  @using (Html.BeginForm())
+  {
+    <h4>Track Title</h4>
+    @Html.LabelFor(model => model.Title, new { placeholder = "Title" })
+    <br />
+    <h4>Artist</h4>
+    @Html.LabelFor(model => model.Artist, new { placeholder = "Artist" })
+    <br />
+    <h4>Album</h4>
+    @Html.LabelFor(model => model.Album, new { placeholder = "Album" })
+    <br />
+    <h4>Album Artwork URL</h4>
+    @Html.LabelFor(model => model.AlbumArtwork, new { placeholder = "URL" })
+    <br />
+    <input type="submit" value="Add" class="btn btn-primary" />
+  }
+</div>
+<br />
+
+<div class="container">
+  <h5>@Html.ActionLink("Back to Song List", "Index")</h5>
+</div>
