Comment out code

--- a/SpotifyClone/Views/Albums/New.cshtml
+++ b/SpotifyClone/Views/Albums/New.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
   Layout = "_Layout";
 }
     <h1>Add an album</h1>
@@ -13,4 +13,4 @@
     </form>
 
     <p><a href="/">Back home</a></p>
-    <p><a href="/albums">Back to categories.</a></p>
+    <p><a href="/albums">Back to categories.</a></p> *@
