--- a/SpotifyClone/Views/Home/Index.cshtml
+++ b/SpotifyClone/Views/Home/Index.cshtml
@@ -7,3 +7,4 @@ arrow_right_alt
 </span></a>
     <br>
     <a href='/albums/new'>New Album <span class="material-symbols-outlined">Add_circle</span></a>
+    @Html.ActionLink("New Album", "Create", "Songs")
