--- a/SpotifyClone/Views/Songs/Show.cshtml
+++ b/SpotifyClone/Views/Songs/Show.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+@* <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -18,4 +18,4 @@
     <a href='/songs/new'>Add another song</a>
     <a href='/songs'>View all songs</a>
   </body>
-</html>
+</html> *@
