--- a/SpotifyClone/Views/Albums/Index.cshtml
+++ b/SpotifyClone/Views/Albums/Index.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
   Layout = "_Layout";
 }
 
@@ -18,4 +18,4 @@
 
     <p><a href='/'>Back home <span class="material-symbols-outlined">
 arrow_back
-</span></a></p>
+</span></a></p> *@
