--- a/SpotifyClone/Views/Albums/Show.cshtml
+++ b/SpotifyClone/Views/Albums/Show.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+@* <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -25,4 +25,4 @@
     <p><a href='/albums'>Return to album list</a></p>
     <p><a href='/'>Return to Main Page</a></p>
   </body>
-</html>
+</html> *@
