Fix build errors + add Create View

--- a/SpotifyClone/Views/Songs/Create.cshtml
+++ b/SpotifyClone/Views/Songs/Create.cshtml
@@ -20,7 +20,7 @@
     @Html.LabelFor(model => model.Album, new { placeholder = "Album" })
     <br />
     <h4>Album Artwork URL</h4>
-    @Html.LabelFor(model => model.AlbumArtwork, new { placeholder = "URL" })
+    @Html.LabelFor(model => model.AlbumArtworkUrl, new { placeholder = "URL" })
     <br />
     <input type="submit" value="Add" class="btn btn-primary" />
   }
