:hammer_and_wrench:

--- a/SpotifyClone/Views/Home/Index.cshtml
+++ b/SpotifyClone/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
     <a href='/albums'>View Albums <span class="material-symbols-outlined">
 arrow_right_alt
 </span></a>
-    <br>
+    <br />
     <a href='/albums/new'>New Album <span class="material-symbols-outlined">Add_circle</span></a>
-    @Html.ActionLink("New Album", "Create", "Songs")
+    <br />
+    <a href='/songs/create'>New Song <span class="material-symbols-outlined">Add_circle</span></a>
