--- a/SpotifyClone/Views/Shared/_Layout.cshtml
+++ b/SpotifyClone/Views/Shared/_Layout.cshtml
@@ -11,15 +11,15 @@
       crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/styles.css">
     <nav class="navbar navbar-light bg-black">
-    <a class="navbar-brand" href="/">
-    <h1 class="spotify">Spotify</h1>
-    <img src="https://i.pinimg.com/1200x/dd/28/6f/dd286f40f446b8fb7db90147608d986e.jpg" width="200" height="275" class="d-inline-block align-top" alt="">
-  </a>
-</nav>
+      <a class="navbar-brand" href="/">
+      <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Green.png" width="255" height="80">
+      </a>
+      <a href="/">Home <span class="material-symbols-outlined">home</span></a>
+      <a href="/">About <span class="material-symbols-outlined">info</span></a>
+    </nav>
   </head>
   <body>
     <div class="container">
-      <a href="/">Home <span class="material-symbols-outlined">home</span></a>
       <br />
       @RenderBody()
     </div>
