--- a/SpotifyClone/Views/Songs/Create.cshtml
+++ b/SpotifyClone/Views/Songs/Create.cshtml
@@ -11,22 +11,23 @@
   @using (Html.BeginForm())
   {
     <h4>Track Title</h4>
-    @Html.LabelFor(model => model.Title, new { placeholder = "Title" })
+    @Html.TextBoxFor(model => model.Title, new { placeholder = "Title" })
     <br />
     <h4>Artist</h4>
-    @Html.LabelFor(model => model.Artist, new { placeholder = "Artist" })
-    <br />
+    @Html.TextBoxFor(model => model.Artist, new { placeholder = "Artist" })
+    @* <br />
     <h4>Album</h4>
-    @Html.LabelFor(model => model.Album, new { placeholder = "Album" })
+    @Html.TextBoxFor(model => model.Album, new { placeholder = "Album" }) *@
     <br />
     <h4>Album Artwork URL</h4>
-    @Html.LabelFor(model => model.AlbumArtworkUrl, new { placeholder = "URL" })
+    @Html.TextBoxFor(model => model.AlbumArtworkUrl, new { placeholder = "URL" })
     <br />
-    <input type="submit" value="Add" class="btn btn-primary" />
+    <br />
+    <input type="submit" value="Add" class="btn btn-success" />
   }
 </div>
 <br />
 
 <div class="container">
-  <h5>@Html.ActionLink("Back to Song List", "Index")</h5>
+  <h5 class="back">@Html.ActionLink("Back to Song List", "Index")</h5>
 </div>
