--- a/SpotifyClone/Views/Shared/_Layout.cshtml
+++ b/SpotifyClone/Views/Shared/_Layout.cshtml
@@ -16,12 +16,11 @@
       </a>
       <a href="/">Home <span class="material-symbols-outlined">home</span></a>
       <a href="/">About <span class="material-symbols-outlined">info</span></a>
+      <a href="/songs/">Your Library <span class="material-symbols-outlined">lists</span></a>
     </nav>
   </head>
   <body>
-    <div class="container">
       <br />
       @RenderBody()
-    </div>
   </body>
 </html>
