--- a/SpotifyClone/wwwroot/css/styles.css
+++ b/SpotifyClone/wwwroot/css/styles.css
@@ -43,9 +43,25 @@ a:hover {
 }
 
 .container {
+  background-color: rgba(52, 46, 46, 0.112);
   float: left;
   margin: auto;
   margin-left: 100px;
+  border-radius: 35px;
   width: 100vh;
-  max-width: 450px;
+  max-width: 350px;
+  max-height: 575px;
+  overflow: auto;
+}
+
+.transparent {
+  opacity: 85%;
+}
+
+h3 {
+  margin-bottom: 5px;
+}
+
+p {
+  margin-top: 5px;
 }
