--- a/SpotifyClone/Views/Albums/Index.cshtml
+++ b/SpotifyClone/Views/Albums/Index.cshtml
@@ -1,4 +1,4 @@
-@* @{
+@{
   Layout = "_Layout";
 }
 
@@ -13,9 +13,9 @@
 
     @foreach (Album album in Model)
     {
-      <h3><a href='/albums/@album.Id'>@album.Name | @album.Artist</a></h3>
+      <h3><a href='/albums/@album.AlbumId'>@album.Title | @album.Artist</a></h3>
     }
 
     <p><a href='/'>Back home <span class="material-symbols-outlined">
 arrow_back
-</span></a></p> *@
+</span></a></p>
