New => Create View + update Index

--- a/SpotifyClone/Views/Home/Index.cshtml
+++ b/SpotifyClone/Views/Home/Index.cshtml
@@ -6,6 +6,6 @@
 arrow_right_alt
 </span></a>
     <br />
-    <a href='/albums/new'>New Album <span class="material-symbols-outlined">Add_circle</span></a>
+    <a href='/albums/create'>New Album <span class="material-symbols-outlined">Add_circle</span></a>
     <br />
     <a href='/songs/create'>New Song <span class="material-symbols-outlined">Add_circle</span></a>
