--- a/SpotifyClone/Views/Shared/_Layout.cshtml
+++ b/SpotifyClone/Views/Shared/_Layout.cshtml
@@ -20,7 +20,9 @@
     </nav>
   </head>
   <body>
+      <div class="container">
       <br />
       @RenderBody()
+      </div>
   </body>
 </html>
