--- a/SpotifyClone/Views/Albums/Create.cshtml
+++ b/SpotifyClone/Views/Albums/Create.cshtml
@@ -7,24 +7,20 @@
 <h1>Add New Album</h1>
 <hr />
 
-<div class="container">
-  @using (Html.BeginForm())
+@using (Html.BeginForm())
   {
     <h4>Album Title</h4>
-    @Html.TextBoxFor(model => model.Title, new { placeholder = "Title" })
+    @Html.TextBoxFor(model => model.Title, new { placeholder = "Title", @class = "form-control" })
     <br />
     <h4>Release Date</h4>
-    @Html.TextBoxFor(model => model.ReleaseDate, new { placeholder = "Artist" })
+    @Html.TextBoxFor(model => model.ReleaseDate, new { placeholder = "Artist", @class = "form-control" })
     <br />
     <h4>Album Artwork URL</h4>
-    @Html.TextBoxFor(model => model.AlbumArtworkUrl, new { placeholder = "URL" })
+    @Html.TextBoxFor(model => model.AlbumArtworkUrl, new { placeholder = "URL", @class = "form-control" })
     <br />
     <br />
-    <input type="submit" value="Add" class="btn btn-success" />
+    <input type="submit" value="Add" class="btn btn-outline-success" />
   }
-</div>
 <br />
+<h5 class="back">@Html.ActionLink("Back to Song List", "Index")</h5>
 
-<div class="container">
-  <h5 class="back">@Html.ActionLink("Back to Song List", "Index")</h5>
-</div>
