--- a/SpotifyClone/Views/Songs/Create.cshtml
+++ b/SpotifyClone/Views/Songs/Create.cshtml
@@ -7,27 +7,23 @@
 <h1>Add New Song</h1>
 <hr />
 
-<div class="container">
   @using (Html.BeginForm())
   {
     <h4>Track Title</h4>
-    @Html.TextBoxFor(model => model.Title, new { placeholder = "Title" })
+    @Html.TextBoxFor(model => model.Title, new { placeholder = "Title", @class = "form-control" })
     <br />
     <h4>Artist</h4>
-    @Html.TextBoxFor(model => model.Artist, new { placeholder = "Artist" })
+    @Html.TextBoxFor(model => model.Artist, new { placeholder = "Artist", @class = "form-control" })
     @* <br />
     <h4>Album</h4>
     @Html.TextBoxFor(model => model.Album, new { placeholder = "Album" }) *@
     <br />
     <h4>Album Artwork URL</h4>
-    @Html.TextBoxFor(model => model.AlbumArtworkUrl, new { placeholder = "URL" })
+    @Html.TextBoxFor(model => model.AlbumArtworkUrl, new { placeholder = "URL", @class = "form-control" })
     <br />
     <br />
-    <input type="submit" value="Add" class="btn btn-success" />
+    <input type="submit" value="Add" class="btn btn-outline-success" />
   }
-</div>
 <br />
+<h5 class="back">@Html.ActionLink("Back to Song List", "Index")</h5>
 
-<div class="container">
-  <h5 class="back">@Html.ActionLink("Back to Song List", "Index")</h5>
-</div>
